# project-forge

./: .gitignore  CLAUDE.md  README.md  asm_optimization_harness_prompt.md  intent_driven_exploration.md  llm_assembly_optimization_landscape.md  project_patterns_draft.md  pyproject.toml  refactor_notes.md
.claude/: settings.json
.claude/commands/: architect.custom.md  architect.md  audit.md  bootstrap.md  close-out.custom.md  close-out.md  compare.md  debug.custom.md  debug.md  drift.md  engineer.custom.md  engineer.md  monitor.md  permissions.md  rebase.md  review.custom.md  review.md  spec.custom.md  spec.md  status.md  survey.md
.forge/: manifest.yaml
baseline/: README.md  capability_baseline.md  coding_guidelines.md  enforcement_matrix.md
commands/custom/: architect.prompt.md  close-out.prompt.md  debug.prompt.md  engineer.prompt.md  review.prompt.md  spec.prompt.md
commands/global/: architect.md  close-out.md  debug.md  review.md
commands/project/: architect.prompt.md  close-out.prompt.md  debug.prompt.md  engineer.prompt.md  manifest-skeleton.prompt.md  review.prompt.md  spec.prompt.md
conventions/global/: markdown.md  python.md
docs/: command_qualities.md
expository/: CLAUDE.md.spec.md  README.md.spec.md
forge/: __init__.py  cli.py  manifest.py  manifest.schema.json  resolver.py  update.py
invariants/: global.md
notes/: cli-architecture-trace.md
profiles/: configured_projects_analysis.md  ecosystem_dashboard.md
registry/: projects.yaml
tests/: test_baseline_claims.py  test_manifest.py  test_resolver.py  test_update.py
(+79 files in other folders)
